[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas-sdk"
version = "0.1.0"
description = "Shared models and schemas for PipelineAtlas microservices"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
